connect to mssql db

--- a/Services/Auth.API/appsettings.Development.json
+++ b/Services/Auth.API/appsettings.Development.json
@@ -1,8 +1,8 @@
 {
   "DatabaseSettings": {
     "ConnectionString": {
-      "MSSQL": "Server=YourServerName;Database=YourDatabaseName;User Id=YourUsername;Password=YourPassword;TrustServerCertificate=True;",
-      "Postgres": "Host=YourHost;Port=5432;Database=YourDatabaseName;Username=YourUsername;Password=YourPassword",
+      "MSSQL": "Server=DESKTOP-OHFPVHP;Database=AuthDb;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true",
+      "Postgres": "server=host.docker.internal; Port=5433; User Id=postgres; Password=sasasa; Database=247",
       "MySQL": "Server=YourServerName;Database=YourDatabaseName;User=YourUsername;Password=YourPassword;",
       "SQLite": "Data Source=YourDatabaseFile.db;",
       "Oracle": "User Id=YourUsername;Password=YourPassword;Data Source=YourOracleDataSource;"
