--- a/Services/Auth.API/Auth.API.csproj
+++ b/Services/Auth.API/Auth.API.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>65fad7f8-9158-4452-82ec-5074e87bda66</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
